--- a/tarea_ICI3170_1.ipynb
+++ b/tarea_ICI3170_1.ipynb
@@ -39,13 +39,14 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "# Tarea X\n",
+        "# Tarea ICI3170-1\n",
         "\n",
         "## Integrantes\n",
         "\n",
-        "- nombre apellidos\n",
-        "- nombre apellidos\n",
-        "- nombre apellidos\n",
+        "- Lucas Erazo\n",
+        "- Valentina Guzman\n",
+        "- Jose Villamayor\n",
+        "\n",
         "\n"
       ],
       "metadata": {
