--- a/tarea_ICI3170_1.ipynb
+++ b/tarea_ICI3170_1.ipynb
@@ -662,10 +662,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Instalar si no tienes las librerías\n",
-        "# install.packages(\"readxl\")\n",
-        "# install.packages(\"dplyr\")\n",
-        "\n",
         "# Cargar librerías\n",
         "library(readxl)\n",
         "library(dplyr)\n",
@@ -1491,10 +1487,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Instalar moments si no lo tienes instalado\n",
-        "#install.packages(\"moments\")\n",
-        "# Instalar moments si no lo tienes instalado\n",
-        "install.packages(\"moments\") # Descomenta esta línea y ejecútala para instalar el paquete\n",
+        "install.packages(\"moments\")\n",
         "\n",
         "library(moments)\n"
       ],
