--- a/tarea_ICI3170_1.ipynb
+++ b/tarea_ICI3170_1.ipynb
@@ -2119,6 +2119,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### **Interpretación**\n",
+        "\n",
+        "Al visualizar ambos gráficos podemos ver que las **comunas grandes** tienen una infraestructura digital más desarrollada en cuanto a la disponibilidad de trámites en línea, mientras que las **comunas urbanas** tienen una mayor concentración de municipios con una oferta de trámites en línea muy limitada.\n",
+        "\n",
+        "### **Comparación**\n",
+        "\n",
+        "La diferencia entre ambas distribuciones es evidente: mientras que las comunas grandes muestran una mayor dispersión en la cantidad de trámites disponibles, las comunas urbanas están fuertemente concentradas en la parte baja de la distribución, con pocas comunas que ofrezcan más de 5 trámites en línea.\n",
+        "\n",
+        "\n",
+        "La mayor asimetría en las comunas urbanas refleja una desigualdad más pronunciada en la disponibilidad de trámites en línea, con una gran cantidad de comunas ofreciendo muy pocos o ningún trámite, mientras que algunas pocas comunas destacan con una oferta significativamente mayor."
+      ],
+      "metadata": {
+        "id": "sD_TFoAPToMS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#item 5.b"
       ],
       "metadata": {
@@ -2213,6 +2231,23 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#Interpretación:\n",
+        "\n",
+        "Al visualizar ambos gráficos podemos ver que se evidencia una brecha digital importante entre las comunas grandes y las semiurbanas/rurales, con las primeras liderando en cuanto a la oferta de trámites en línea y las segundas mostrando una gran disparidad en su acceso a este tipo de servicios.\n",
+        "\n",
+        "#Comparación:\n",
+        "\n",
+        "La diferencia entre las comunas grandes y las semiurbanas/rurales es muy notable. Mientras que las comunas grandes tienen una distribución más equilibrada y una mayor oferta de trámites en línea, las comunas semiurbanas/rurales muestran una oferta extremadamente limitada, con la gran mayoría de las comunas ofreciendo 0 o muy pocos trámites en línea.\n",
+        "\n",
+        "La alta asimetría en las comunas semiurbanas/rurales indica una gran desigualdad en la oferta de trámites en línea entre los municipios de este grupo, con la mayoría de las comunas quedándose significativamente atrás en comparación con las comunas grandes."
+      ],
+      "metadata": {
+        "id": "gX8pRHbnTxeS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#item 5.c"
       ],
       "metadata": {
@@ -2303,6 +2338,24 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Interpretación:**\n",
+        "\n",
+        "Al visualizar ambos gráficos podemos notar que tanto las comunas urbanas como las semiurbanas/rurales presentan serias limitaciones en la oferta de trámites en línea, aunque la disparidad es mayor en las comunas semiurbanas/rurales, lo que refleja una brecha digital aún más significativa.\n",
+        "\n",
+        "### **Comparación:**\n",
+        "\n",
+        "Tanto las comunas urbanas como las semiurbanas/rurales muestran una asimetría positiva considerable, lo que sugiere que en ambos casos hay una gran cantidad de comunas con muy pocos trámites disponibles y solo unas pocas que tienen una oferta significativa de trámites en línea.\n",
+        "\n",
+        "\n",
+        "Sin embargo, la asimetría es más pronunciada en las comunas semiurbanas/rurales, lo que indica una mayor desigualdad en el acceso a trámites en línea en estas áreas. Las comunas urbanas, aunque también muestran asimetría, pero tienen una distribución ligeramente menos extrema, con algunas comunas alcanzando un número mayor de trámites en línea."
+      ],
+      "metadata": {
+        "id": "tN_stdt8URwS"
+      }
     }
   ]
 }
